--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jade": "~1.11.0",
     "mongoose": "^6.2.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "react-scripts": "^5.0.1"
   }
 }
